# SANET

./: .gitignore  .gitignore.orig  AbstractBroadcastNode.hpp  AbstractReliableBroadcast.hpp  CCCommands.hpp  CCPackets.hpp  CCServer.cpp  CCServer.hpp  CCobin.cpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Dispatcher.cpp  Dispatcher.hpp  Image.cpp  Image.hpp  ImageBuilder.cpp  ImageBuilder.hpp  ImageChunkPacket.hpp  ImagingServer.cpp  ImagingServer.hpp  MainServer.cpp  MainServer.hpp  Makefile  Position.cpp  Position.hpp  README.md  ReliableMainServer.cpp  ReliableMainServer.hpp  SocketList.hpp  TODO  TrackPacket.hpp  Tracker.cpp  Tracker.hpp  TrackingServer.cpp  TrackingServer.hpp  ccclient.py  ccmain  ccmain.cpp  commandsender  (+24 more)
Activités/: act1_cake_sol.xcf  act1_pizza_sol.xcf  activites.txt
Images_Poster/: images.txt
Posters/: posters.txt
Presentation/: prekentation.odt  rawad.txt
batman/: antenna.sh  batmanify.sh  bugger.sh  connectwifi.sh  frpi.sh  getpublic.sh  globals.sh  killwifi.sh  neighmonitor.sh  pull.sh  run.sh  setup.sh  switchscreen.sh  testgpio.c
batman/rsrc/: config_waveshare.txt  dhcpd.conf  hostapd.conf  isc-dhcp-server  requirements.txt  requirements_rasp.txt
conf/: current.position  dummy.polygon  global_area.polygon
database_utils/: .nfs0000000001781dd200000329  DbUtils.hpp  init.sql  sanet.db
flightplanning/: area_partitioner.py  autopilot.py  ccclient.py  db_utils.py  find_TSP_solution.py  flight_plan.py  flight_planner.py  flight_server.py  global_settings.py  json_utils.py  map_gui.py  map_gui_simulation.py  map_gui_test.py  user_gui.py  user_gui_simulation.py  user_gui_test.py  utils.py
flightplanning/tools/: Makefile  nodemapsender.cpp  t_flightserver_visual.py
img/: imglink.txt
tools/: Makefile  command_sender  command_sender.cpp  commandsender.cpp  imagesender.cpp  nodemap_sender  nodemap_sender.cpp  nodemapsender.cpp  tpacket_broadcaster.cpp
